@@ -1,3 +1,8 @@
+Fri Nov  1 17:46:06 2002  Jonathan Blandford  <jrb@gnome.org>
+
+	* gnome-keybinding-properties.c: move to use gnome-theme-info
+	instead of theme-common.
+
 2002-10-21  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.1.1
